// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceImage renders correctly with props 1`] = `
<div
  className="cities__image-wrapper place-card__image-wrapper"
>
  <a
    href="#"
    onClick={[Function]}
  >
    <img
      alt="Place image"
      className="place-card__image"
      height="200"
      src="img/apartment.jpg"
      width="260"
    />
  </a>
</div>
`;

exports[`PlaceImage renders correctly without props 1`] = `
<div
  className="cities__image-wrapper place-card__image-wrapper"
>
  <a
    href="#"
    onClick={[Function]}
  >
    <img
      alt="Place image"
      className="place-card__image"
      height="200"
      src="img/room.jpg"
      width="260"
    />
  </a>
</div>
`;
